Fixed overlapping divs on home page

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -42,12 +42,3 @@
     height: 10rem;
   }
 
-  @media (min-height: 700px) {
-      .slideshow {
-          position: fixed;
-          left: 50%;
-          bottom: 25%;
-          transform: translate(-50%, 50%);
-
-      }
-  }
